--- a/index.html
+++ b/index.html
@@ -1496,32 +1496,135 @@ Andreas Dengel (Hg.): Semantische Technologien. Grundlagen. Konzepte. Anwendunge
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 --
 ## Thema 10: Open Science
+
+
+
+---
+### Aufgabe A: Video zu Open Access
+
+* Bitte schauen Sie sich das folgende Video zum Thema "Open Access" an: https://www.youtube.com/watch?v=9RQy4wtYls0
+* Beantworten Sie die beiden folgenden Fragen:
+* (1) Welche Gründe halten Ihrer Meinung nach Wissenschaftler:innen weiterhin davon ab, noch viel mehr im Open Access zu publizieren, obwohl es doch eigentlich so viele Vorteile bringt, das zu tun?
+* (2) Welche Anliegen oder Aspekte beim Zugang zu Fachliteratur sind aus Ihrer Sicht als Studierende besonders wichtig und sollten auch politisch / finanziell besser unterstützt werden?
+
+
+---
+### Antworten zu (1) 
+* Geringere Wertschätzung für kostenfreie Literatur?
+* Angst vor Plagiaten / Missbrauch / Urheberrechtsverletzungen
+* Autoren vermuten geringeren Lerneffekt, wenn der Rechercheaufwand niedrig ist
+* Gebühren / Kosten für die Open Access-Publikationen
+* Bei Open Access-Publikationen verlieren die Autor:innen Einkommen
+* Es bringt höheres Ansehen / Renommée, nicht Open Access zu publizieren
+
+---
+### Antworten zu (1) 
+* Allgemeine Aversion gegen die Digitalisierung
+* Mangelnder Wille zur Selbstausbeutung
+* Gewohnheit der altmodischen Methode
+* Angst vor mangelndem Datenschutz
+* Im Closed Access werden mehr Leser:innen erreicht
+* Schwächere Qualitätskontrollen bei Open Access
+* Schlechtere Auffindbarkeit der Publikationen
+
+---
+### Antworten zu (1) 
+* ungeklärte langfristige Zugänglichkeit elektronischer Publikationen
+* keine Garantie für mehr Zitationen als bei Closed Access
+* Mehr Aufwand, Open Access zu publizieren
+* die eigene Arbeit aus Stolz nicht für jeden so leicht zugänglich machen wollen
+* Kontrollverlust, weil die Rechte abgegeben werden
+* Schnellere Anschlussforschung durch Andere möglich / Konkurrenz
+* Es könnte mit dem Journal Impact Factor zusammenhängen
+* nicht genügend Unterstützung für Open Access
+
+
+---
+### Antworten zu (2) 
+* Kostenfreier Zugriff auf digitale Fachliteratur 
+* Open Access ist einfacher in der Lehre einzusetzen
+* Mehr Mittel für Subskriptionen sind nötig
+* Einfachere, übersichtlichere, einheitlichere Auffindbarkeit ermöglichen
+* Wenigstens kurzer, kostenfreier Zugang um zu Prüfen, ob das Werk relevant ist
+* Mehr Mittel für die Bibliotheken, um Lernräume und Technik verfügbar zu machen
+* Es ist demotivierend, wenn man ständig auf Paywalls stößt
+* In vielen Ländern bestünde ohne Open Access kaum Zugang zu Forschung
+* Freemium-Modelle wären hilfreich
+* Mittel, um freie Verfügbarkeit für die Lehre zu finanzieren
+* Vor allem Lehrbücher sollten kostenfrei sein
+
+
+--- 
+### Filmtipp
+https://paywallthemovie.com/
+
+
+
+---
+### (B) Wikipedia-Artikel zum Thema "Open Science"
+* Bitte lesen Sie den Artikel zu "Open Science" bei Wikipedia: https://en.wikipedia.org/wiki/Open_science
+* Bitte beantworten Sie die beiden folgenden Fragen:
+* (1) Wie hängen Ihrer Meinung nach Open Access und Open Data zusammen?
+* (2) Welche Informationen vermissen Sie in dem Wikipedia-Artikel?
+
+
+---
+### (1) Open Access / Open Science
+* Beide sind Bestandteile der Open Science-Bewegung
+* Unterschied: Daten vs. Publikationen
+* Beide haben ähnliche Ziele
+* Beide fordern einen freieren Umgang mit gewonnenem Wissen und Forschungsergebnissen
+* Beide fördern die schnellere Weiterentwicklung der Wissenschaft
+* Der Übergang von Open Access zu Open Data ist fließend
+* Beruhen beide auf Software / Digitalisierung / Internet
+* Beide ermöglichen den freien Zugriff auf Daten
+
+
+
+---
+### (2) Was fehlt im Wikipedia-Artikel?
+* Die "Six Principles of Open Science" sind nicht erklärt
+* Tatsächliche Anwendung von Open Science in der Praxis
+* Vergleich zwischen verschiedenen Ländern
+* Typen von Open Access (Gold, Grün Bronze)
+* Geschäftsmodelle von Open Science
+
+---
+### (2) Was fehlt im Wikipedia-Artikel?
+* Zukunftsausblick zu Chancen und Möglichkeiten von Open Science
+* Warum ist diese "Offenheit" überhaupt so wichtig?
+* Kritik an Open Science
+* Wichtige historische und aktuelle Akteure 
+
+
+---
+### Abschluss: #IchBinHanna
+* https://dig-hum.de/stellungnahme-dhd-wisszeitvg-0621
+* https://twitter.com/hashtag/IchbinHanna
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
