--- a/index.html
+++ b/index.html
@@ -1548,6 +1548,9 @@ Andreas Dengel (Hg.): Semantische Technologien. Grundlagen. Konzepte. Anwendunge
 * Mehr Mittel für Subskriptionen sind nötig
 * Einfachere, übersichtlichere, einheitlichere Auffindbarkeit ermöglichen
 * Wenigstens kurzer, kostenfreier Zugang um zu Prüfen, ob das Werk relevant ist
+
+---
+### Antworten zu (2) 
 * Mehr Mittel für die Bibliotheken, um Lernräume und Technik verfügbar zu machen
 * Es ist demotivierend, wenn man ständig auf Paywalls stößt
 * In vielen Ländern bestünde ohne Open Access kaum Zugang zu Forschung
@@ -1556,8 +1559,10 @@ Andreas Dengel (Hg.): Semantische Technologien. Grundlagen. Konzepte. Anwendunge
 * Vor allem Lehrbücher sollten kostenfrei sein
 
 
---- 
+---
 ### Filmtipp
+<img height="400" data-src="img/paywall.jpg">
+
 https://paywallthemovie.com/
 
 
@@ -1586,7 +1591,27 @@ https://paywallthemovie.com/
 ---
 ### (2) Was fehlt im Wikipedia-Artikel?
 * Die "Six Principles of Open Science" sind nicht erklärt
+<img height="400" data-src="img/openscience.png">
+
+---
+### (2) Was fehlt im Wikipedia-Artikel?
 * Tatsächliche Anwendung von Open Science in der Praxis
+
+---
+### Beispiel "Open Street Map"
+<img height="400" data-src="img/osm.png"></img>
+
+* http://www.openstreetmap.org
+
+---
+### Beispiel "Wheelmap.org"
+<img height="400" data-src="img/wheelmap.png"></img>
+
+* http://www.wheelmap.org
+
+
+---
+### (2) Was fehlt im Wikipedia-Artikel?
 * Vergleich zwischen verschiedenen Ländern
 * Typen von Open Access (Gold, Grün Bronze)
 * Geschäftsmodelle von Open Science
@@ -1600,7 +1625,13 @@ https://paywallthemovie.com/
 
 
 ---
+### Weitere Informationen
+* https://dh-trier.github.io/dh-vorlesung/reveal/DH-E13_Open-Humanities.html#/
+
+---
 ### Abschluss: #IchBinHanna
+<img height="400" data-src="img/ichbinhanna.jpg">
+
 * https://dig-hum.de/stellungnahme-dhd-wisszeitvg-0621
 * https://twitter.com/hashtag/IchbinHanna
 
